commit from desk

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 </head>
+
 <body>
-<header>
-<h1>Or Schapira</h1>
-</header>
+    <header>
+        <h1>Or Schapira</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer></footer>
 </body>
+
 </html>
