yet another silly commit

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
 
 <head>
+    <title>Or Schapira</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <h1>Or Schapira</h1>
+        <p></p>
     </header>
     <main>
-
+        <ul>
+            <li>Blog</li>
+            <li>some other list item</li>
+        </ul>
     </main>
     <footer></footer>
 </body>
